--- a/index.html
+++ b/index.html
@@ -18,28 +18,46 @@
         <h1 id="page-title">Cancer&nbsp;Rates&nbsp;in&nbsp;the&nbsp;US</h1>
       </div>
 			<div id="content-container">
-				<div class="selection left" data-toggle="buttons">
-		  		<label class="btn btn-primary">
-		    		<input value="Male" class="sex" type="radio" name="options" id="option1" autocomplete="off">Male
-		  		</label>
-		  		<label class="btn btn-primary active">
-		    		<input value="Female" type="radio" class="sex" name="options" id="option2" autocomplete="off" checked>Female
-		  		</label>
-				</div>
+				<div class="allOptions">
+					<div class="selection left">
+						<h2 class="optionTitle">Filter Gender</h2>
+						<label class="button option1">
+							<input value="Male" class="sex" type="radio" name="gender-options"
+							id="option1" autocomplete="off" checked>Male
+						</label>
+						<label class="button option2">
+							<input value="Female" class="sex" type="radio"
+							name="gender-options" id="option2" autocomplete="off">Female
+						</label>
+					</div>
 
-				<div class="selection right" data-toggle="buttons">
-		  		<label class="btn btn-primary">
-		    		<input value = "White" type="radio" name="options" id="option1" autocomplete="off">White
-		  		</label>
-		  		<label class="btn btn-primary active">
-		    		<input value = "Black or African American" type="radio" name="options" id="option2" autocomplete="off" checked>Black or African American
-		  		</label>
-					<label class="btn btn-primary active">
-		    		<input value = "Asian or Pacific Islander" type="radio" name="options" id="option3" autocomplete="off" checked>Asian or Pacific Islander
-		  		</label>
-					<label class="btn btn-primary active">
-		    		<input value = "Other Races and Unknown combined" type="radio" name="options" id="option4" autocomplete="off" checked>Other Races and Unknown combined
-		  		</label>
+					<div class="selection right">
+						<h2 class="optionTitle">Filter Race</h2>
+						<label class="button option1">
+							<input value = "White" type="radio" name="race-options"
+							id="option1" autocomplete="off" checked>White
+						</label>
+						<label class="button option2">
+							<input value = "Black or African American" type="radio"
+							name="race-options" id="option2"
+							autocomplete="off">Black or African American
+						</label>
+						<label class="button option3">
+							<input value = "Asian or Pacific Islander" type="radio"
+							name="race-options" id="option3"
+							autocomplete="off">Asian or Pacific Islander
+						</label>
+						<label class="button option4">
+							<input value = "American Indian or Alaska Native" type="radio"
+							name="race-options" id="option4"
+							autocomplete="off">American Indian or Alaska Native
+						</label>
+						<label class="button option5">
+							<input value = "Other Races and Unknown combined" type="radio"
+							name="race-options" id="option5"
+							autocomplete="off">Other Races and Unknown combined
+						</label>
+					</div>
 				</div>
 				<div id="vis" class="plate">
 
