--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script src="https://code.jquery.com/jquery.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
 		<script src="http://d3js.org/topojson.v1.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script src="js/d3-slider.js"></script>
 
 	</head>
